tests/bad/void-var-declaration.ris
void main():
    let void a;
    return;